--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,29 +2,44 @@
   margin: 0;
   padding: 0;
   border: 0;
+  font-family: sans-serif;
+  font-size: 20px;
+}
+
+h1 {
+  font-size: 35px;
+}
+
+ul li {
+  padding: 5px;
+  vertical-align: center;
+  list-style-position: inside;
 }
 
 h4 {
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 button {
   outline: none;
+  background-color:inherit;
 }
 
 .active-button {
-  transform: scale(1.1);
-  transition: all 1.4s;
+  transform: scale(1.2);
+  transition: all 1.5s;
 }
 
 img {
-  max-width: 95%
+  max-width: 95%;
 }
 
 
 .main-container {
   position: absolute;
   width: 100%;
+  height: 100%;
+  background-color: #fafafa;
 }
 
 .welcome {
@@ -67,11 +82,11 @@ img {
 
 .vertical-line {
   border-right: 2px solid gray;
-  height: 100%;
+  height: 60%;
   position: absolute;
   left: 50%;
   margin-left: -3px;
-  top: 50;
+  top: 70px;
 }
 
 .computer {
@@ -116,4 +131,35 @@ img {
 .score-board span {
   line-height: 70px;
   font-size: 200%
+}
+
+.rule span {
+  color: #863d3d;
+  position: relative;
+  left: 3%;
+}
+
+.rule {
+  position: relative;
+  top: 570px;
+  width: 85%;
+  left: 15%;
+}
+
+.result {
+  position: absolute;
+  margin-top: 50px;
+  border: 4px solid gray;
+  height: 70px;
+  width: 20%;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.result p {
+  position: relative;
+  font-size: 150%;
+  text-align: center;
+  top: 15px;
 }
